			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

BUG: (12/12/05, SMR) Interactive sizing disallows dragging on the other side of the anchor (Bug #558).
FIX: In SizeListener.getNewNodeSize(), handle dragging beyond the opposite point.

BUG: (12/9/05, GVG) getCurrentCell not defined in Main.UserInterfaceDummy but it is required (Compactation regression failed).
FIX: Move code under BATCHMODE code to UserInterfaceDummy. In case of batch mode, current cell is from current library.
Remove conditions in WindowFrame.java if Job.BATCHMODE.

BUG: (12/9/05, GVG) Rounding problem in GateGeneration regression noticed while working on the memo.
FIX: Use StdCellParams.getResolution() instead of value stored in Technology.

IMP: (12/8/05, GVG) No com.sun.electric.tools.user.ui dependencies in Cell.java and Pref.java.

BUG: (12/7/05, SMR) Text Properties dialog sets offsets incorrectly (Bug #770).
FIX: In TextInfoPanel.ChangeText.doIt() use proper offset determination.

BUG: (12/7/05, SMR) PostScript writes incorrect text on cell instances (Bug #773).
FIX: In PostScript.recurseCircuitLevel(), use untransformed cell bounds.

BUG: (12/7/05, SMR) Waveform window always calls horizontal axis "seconds", even if it isn't time.
FIX: Use pure numbers when a signal is on the X axis.

IMP/MAN: (12/7/05, SMR) Added David Harris's "merged PostScript" output.
     Fixed MOSIS CMOS technology color opacity.

IMP: (12/7/05, GVG) Got rid of ExplorerTree activities in Job.java

IMP: (12/6/05, GVG) Got rid of user.ui dependencies in ActivityLogger and Job

IMP: (12/3/05, GVG) Similar work with DRC and ErrorLogger.

IMP: (12/2/05, SMR) Major changes to decouple EditWindow and WindowFrame from database.

************************* Version 8.04c: *********************************

IMP: (12/1/05, SMR) New waveform window icons.
