@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04d: *********************************
 
+BUG: (12/14/05, SMR) Project management crashes when changes are made to un-checked-out cells (Bug #776).
+FIX: In Project.detectIllegalChanges(), make the prompt happen in the GUI thread.
+
 BUG: (12/12/05, SMR) Interactive sizing disallows dragging on the other side of the anchor (Bug #558).
 FIX: In SizeListener.getNewNodeSize(), handle dragging beyond the opposite point.
 
